<?xml version="1.0"?>
<package format="2">
  <name>supereight_ros</name>
  <version>0.0.0</version>
  <description>The supereight_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nils@todo.todo">nils</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>

  <!--<depend>mav_visualization</depend>-->
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
